--- a/sass/modules/_m-realisations-grid.scss
+++ b/sass/modules/_m-realisations-grid.scss
@@ -1,12 +1,28 @@
+/*GRID REALISATION CARD1 */
+.grid-containerAmoi {
+  display: grid;
+  grid-template-columns: 20% 13% 7% 15% 30% 15%;
+  font-size: 18px;
+}
+.grid-containerAmoi>* {
+  padding-left: 10px;
+}
+
 .item-1 {
+  grid-column: 1 / 7;
+  grid-row: 2 / 3;
   margin-bottom: 20px;
+  padding-bottom: 10px;
+  margin-top: 20px;
+  //background: orange;
 }
 
 .item-2 {
   grid-column: 1 / 7;
   grid-row: 3 / 6;
+  margin-bottom: 10px;
   margin-top: 30px;
-
+ // background: lightgray;
 }
 
 .item-3 {
@@ -21,9 +37,8 @@
   margin-top: 30px;
   margin-bottom: 40px;
   z-index: 4;
-
-
 }
+
 .item-5 {
   display: none;
 }
@@ -33,13 +48,25 @@
   grid-row: 8 / 10;
   margin-bottom: 10px;
   margin-top: 90px;
-
 }
-/* version petite tablette */
+
+/* version petite tablette xs 600px */
 @media screen and (min-width: break-point(xs)){
+  .grid-containerAmoi {
+    font-size: 16px;
+  }
+
   .item-1 {
-    grid-column: 1 / 7;
+    grid-column: 2 / 7;
     grid-row: 2 / 3;
+    padding-bottom: 10px;
+    margin-bottom: 15px;
+    margin-top: 20px;
+  }
+
+  .item-2{
+    grid-column: 1 / 3;
+    grid-row: 3 / 11;
   }
 
   .item-3 {
@@ -50,45 +77,54 @@
     grid-column: 2 / 7;
   }
 }
-/* grande TABLETTE */
+
+/* grande TABLETTE md = 740 */
 @media screen and (min-width: break-point(md)){
+  .item-1{
+    z-index: 2;
+  }
+
+  .item-2{
+    grid-column: 1/2;
+    grid-row: 3/10;
+    //background-color: brown;
+  }
+
   .item-3 {
-    grid-column: 4 / 7;
+    grid-column: 5/7;
+    margin-left: 40px;
+    padding-left: 20px;
+    z-index: 2;
   }
-  .item-5 {
-    grid-column: 6 / 7;
-    grid-row: 5 / 9;
-    background-color: wheat;
-    z-index: 5;
-    padding-top: 30px;
-  }
+
 }
-/* petit PC portable */
+/* petit PC portable md-plus 799 */
 @media screen and (min-width: break-point(md-plus)){
-
-
   .item-1 {
     grid-column: 5 / 7;
     grid-row: 2 / 3;
-    background: orange;
     padding-bottom: 10px;
     margin-bottom: 15px;
     margin-top: 20px;
+    //background: orange;
   }
 
   .item-2 {
-    grid-column: 1 / 3;
-    grid-row: 3 / 11;
-    background: lightgray;
-    margin-bottom: 10px;
-
+    grid-column: 1/2;
+    grid-row: 3/10;
+    padding: 10px 0;
+   // background : lightgray;
+    p{
+      padding: 10px;
+    }
   }
 
   .item-3 {
     grid-column: 4 / 6;
     grid-row: 4 / 5;
     margin-bottom: 30px;
-
+    z-index: 3;
+    margin-left: 47px;
   }
 
   .item-4 {
@@ -97,25 +133,27 @@
     margin-top: 30px;
     margin-bottom: 30px;
     margin-right: 20px;
-    background-color: blanchedalmond;
     z-index: 4;
+    //background-color: blanchedalmond;
   }
-
   .item-5 {
+    display: grid;
     grid-column: 6 / 7;
     grid-row: 5 / 9;
-
-    z-index: 5;
+    z-index: 6;
     padding-top: 30px;
+    margin-bottom: 20px;
+    //background-color: green;
+    p{
+      font-size: 16px;
+    }
   }
-
-
 
   .item-6 {
-    grid-column: 4 / 6;
+    grid-column: 5 / 7;
     grid-row: 8 / 10;
     margin-bottom: 10px;
+    z-index: 3;
   }
-
 }
 
