--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -5,9 +5,6 @@
 */
 
 
-/* Make css mobile first */
-/*@import "compass"; */
-
 
 /* Reset for better compatibility */
 @import "base/reset";
@@ -18,6 +15,9 @@
 
 /* layout */
 @import "layout/l-layout";
+@import "layout/l-banner";
+@import "layout/l-header";
+@import "layout/l-footer";
 
 /* functions */
 @import "base/functions";
