--- a/sass/modules/_m-home.scss
+++ b/sass/modules/_m-home.scss
@@ -37,7 +37,7 @@
             border-bottom: solid 3px map-get($colors , primaryGreen);
             color: map-get($colors,primary ); 
             font-weight: bold;
-            font-style: normal;
+            font-style: bold;
             }
 
         @media screen and (min-width: map-get($break-point, md)) {
@@ -70,10 +70,10 @@
 
                 span{
                     color: map-get($colors , primaryGreen);
-                    font-weight: normal;
+                    font-weight: bold;
                 }
 
-
+            
             @media screen and (min-width: map-get($break-point, md)) {
                 margin: 7rem auto auto 0;
                 font-size: 22px;
@@ -114,7 +114,7 @@
                 span{
                     border-bottom: solid 3px map-get($colors , primaryGreen);
                     color: map-get($colors,primary ); 
-                    font-style: normal;
+                    font-style: bold;
                 }
 
 
@@ -580,6 +580,7 @@
                                 background-repeat: no-repeat;
                                 background-position:  0rem 0.8rem ;
                                 font-size: 16px;
+                            
 
                                 @media screen and (min-width: map-get($break-point, lg)) {
                                     line-height: 2.5rem;
@@ -594,7 +595,7 @@
                                     color:white;
                                     margin: 0rem 2rem 1rem 2rem ;
                                     font-size: 16px;
-                                    line-height: 2rem;
+                                    line-height: 2.8rem;
 
                                     @media screen and (min-width: map-get($break-point, md)) {
                                         width: 80%;
