CORRECTION FINAL UL

--- a/css/screen.css
+++ b/css/screen.css
@@ -659,10 +659,6 @@ p {
       background-color:map-get($colors,primary); ;
   }*/
 }
-/* line 81, ../sass/layout/_l-header.scss */
-.l-header .l-nav__main.l-menu.is-visible {
-  display: inline-block;
-}
 @media screen and (min-width: 740px) {
   /* line 71, ../sass/layout/_l-header.scss */
   .l-header .l-nav__main.l-menu {
@@ -674,26 +670,26 @@ p {
     background: transparent;
   }
 }
-/* line 102, ../sass/layout/_l-header.scss */
+/* line 97, ../sass/layout/_l-header.scss */
 .l-header .l-nav__main.l-menu nav {
   margin-left: auto;
   margin-right: auto;
 }
 @media screen and (min-width: 740px) {
-  /* line 102, ../sass/layout/_l-header.scss */
+  /* line 97, ../sass/layout/_l-header.scss */
   .l-header .l-nav__main.l-menu nav {
     margin-left: auto;
     margin-right: auto;
   }
 }
 @media screen and (min-width: 1024px) {
-  /* line 102, ../sass/layout/_l-header.scss */
+  /* line 97, ../sass/layout/_l-header.scss */
   .l-header .l-nav__main.l-menu nav {
     margin-left: auto;
     margin-right: 4rem;
   }
 }
-/* line 122, ../sass/layout/_l-header.scss */
+/* line 117, ../sass/layout/_l-header.scss */
 .l-header .l-nav__main.l-menu nav ul {
   height: 100vh;
   padding-top: 5rem;
@@ -701,7 +697,7 @@ p {
   text-align: center;
 }
 @media screen and (min-width: 740px) {
-  /* line 122, ../sass/layout/_l-header.scss */
+  /* line 117, ../sass/layout/_l-header.scss */
   .l-header .l-nav__main.l-menu nav ul {
     z-index: 999;
     width: auto;
@@ -713,18 +709,18 @@ p {
   }
 }
 @media screen and (min-width: 1420px) {
-  /* line 122, ../sass/layout/_l-header.scss */
+  /* line 117, ../sass/layout/_l-header.scss */
   .l-header .l-nav__main.l-menu nav ul {
     margin-right: 2.2rem;
   }
 }
 @media screen and (min-width: 1920px) {
-  /* line 122, ../sass/layout/_l-header.scss */
+  /* line 117, ../sass/layout/_l-header.scss */
   .l-header .l-nav__main.l-menu nav ul {
     margin-right: 4rem;
   }
 }
-/* line 156, ../sass/layout/_l-header.scss */
+/* line 151, ../sass/layout/_l-header.scss */
 .l-header .l-nav__main.l-menu nav li {
   position: relative;
   display: block;
@@ -733,40 +729,44 @@ p {
   padding-left: 1rem;
 }
 @media screen and (min-width: 740px) {
-  /* line 156, ../sass/layout/_l-header.scss */
+  /* line 151, ../sass/layout/_l-header.scss */
   .l-header .l-nav__main.l-menu nav li {
     display: inline-block;
     margin: auto 0rem auto 0rem;
   }
-  /* line 168, ../sass/layout/_l-header.scss */
+  /* line 163, ../sass/layout/_l-header.scss */
   .l-header .l-nav__main.l-menu nav li:hover {
     transform: scale(0.9);
   }
 }
-/* line 176, ../sass/layout/_l-header.scss */
+/* line 171, ../sass/layout/_l-header.scss */
 .l-header .l-nav__main.l-menu nav a {
   text-decoration: none;
   color: white;
   font-size: 25px;
 }
 @media screen and (min-width: 740px) {
-  /* line 176, ../sass/layout/_l-header.scss */
+  /* line 171, ../sass/layout/_l-header.scss */
   .l-header .l-nav__main.l-menu nav a {
     color: white;
     padding: 0.2rem 0.5rem;
     margin: auto auto auto 1rem;
   }
-  /* line 192, ../sass/layout/_l-header.scss */
-  .l-header .l-nav__main.l-menu nav a:hover, .l-header .l-nav__main.l-menu nav a.is-active {
-    right: 0;
+  /* line 187, ../sass/layout/_l-header.scss */
+  .l-header .l-nav__main.l-menu nav a:hover {
+    color: #4eb748;
   }
-  /* line 197, ../sass/layout/_l-header.scss */
+  /* line 192, ../sass/layout/_l-header.scss */
   .l-header .l-nav__main.l-menu nav a.blue-contact {
     color: #4eb748;
   }
+  /* line 195, ../sass/layout/_l-header.scss */
+  .l-header .l-nav__main.l-menu nav a.blue-contact:hover {
+    color: #033752;
+  }
 }
 @media screen and (min-width: 740px) {
-  /* line 210, ../sass/layout/_l-header.scss */
+  /* line 209, ../sass/layout/_l-header.scss */
   .l-header .l-nav__main.l-menu nav a.hover:hover:before {
     display: grid;
     content: "";
@@ -778,7 +778,7 @@ p {
     border-bottom: 3px solid #4eb748;
     border-left: 3px solid #4eb748;
   }
-  /* line 222, ../sass/layout/_l-header.scss */
+  /* line 221, ../sass/layout/_l-header.scss */
   .l-header .l-nav__main.l-menu nav a.hover:hover:after {
     display: block;
     content: "";
@@ -791,12 +791,12 @@ p {
     border-right: 3px solid #4eb748;
   }
 }
-/* line 238, ../sass/layout/_l-header.scss */
+/* line 237, ../sass/layout/_l-header.scss */
 .l-header #menu-up {
   display: none;
 }
 @media screen and (min-width: 740px) {
-  /* line 238, ../sass/layout/_l-header.scss */
+  /* line 237, ../sass/layout/_l-header.scss */
   .l-header #menu-up {
     width: 100%;
     height: 4rem;
@@ -809,7 +809,7 @@ p {
     margin-top: 0rem;
   }
 }
-/* line 255, ../sass/layout/_l-header.scss */
+/* line 254, ../sass/layout/_l-header.scss */
 .l-header #menu-hamburger.l-ham {
   grid-area: l-ham;
   display: grid;
@@ -826,12 +826,12 @@ p {
   position: fixed;
 }
 @media screen and (min-width: 740px) {
-  /* line 255, ../sass/layout/_l-header.scss */
+  /* line 254, ../sass/layout/_l-header.scss */
   .l-header #menu-hamburger.l-ham {
     display: none;
   }
 }
-/* line 278, ../sass/layout/_l-header.scss */
+/* line 277, ../sass/layout/_l-header.scss */
 .l-header #menu-hamburger.l-ham span {
   height: .12rem;
   margin-bottom: -0.9rem;
@@ -844,36 +844,36 @@ p {
   transform: rotate(0deg);
   transition: .25s ease-in-out;
 }
-/* line 294, ../sass/layout/_l-header.scss */
+/* line 293, ../sass/layout/_l-header.scss */
 .l-header #menu-hamburger.l-ham.is-open {
   z-index: 9999;
   display: grid;
 }
 @media screen and (min-width: 740px) {
-  /* line 294, ../sass/layout/_l-header.scss */
+  /* line 293, ../sass/layout/_l-header.scss */
   .l-header #menu-hamburger.l-ham.is-open {
     display: none;
   }
 }
-/* line 305, ../sass/layout/_l-header.scss */
+/* line 304, ../sass/layout/_l-header.scss */
 .l-header #menu-hamburger.l-ham.is-open span {
   background: white;
 }
-/* line 308, ../sass/layout/_l-header.scss */
+/* line 307, ../sass/layout/_l-header.scss */
 .l-header #menu-hamburger.l-ham.is-open span:nth-child(1) {
   transform: rotate(60deg);
   margin-top: 0.68rem;
 }
-/* line 314, ../sass/layout/_l-header.scss */
+/* line 313, ../sass/layout/_l-header.scss */
 .l-header #menu-hamburger.l-ham.is-open span:nth-child(2) {
   transform: rotate(-60deg);
 }
-/* line 319, ../sass/layout/_l-header.scss */
+/* line 318, ../sass/layout/_l-header.scss */
 .l-header #menu-hamburger.l-ham.is-open span:nth-child(3) {
   top: 0rem;
   width: 0%;
 }
-/* line 330, ../sass/layout/_l-header.scss */
+/* line 329, ../sass/layout/_l-header.scss */
 .l-header #menu-hamburger.l-ham.is-open:before {
   background: transparent;
 }
